# COMP.SEC.300-SecProg_project

./: CMakeLists.txt  README.md  TODO.txt  main.cpp
cmake/: fetch_boost.cmake  fetch_clip.cmake  fetch_gtest.cmake  git_version.cmake
common/include/: bytevector.hpp  project_definitions.hpp  stringvector.hpp  version.hpp
encryption/: encryption.cpp
encryption/include/encryption/: encryption.hpp
examples/: README.md  basic_logins.csv  chrome_logins.csv  escaped.csv  escaped_logins.csv  firefox.csv  firefox_logins.csv
src/: CMakeLists.txt  main.cpp
src/cli/: CMakeLists.txt  cli.cpp
src/cli/include/cli/: cli.hpp
src/encryption/: CMakeLists.txt  encryption.cpp
src/encryption/include/encryption/: encryption.hpp  sha256.hpp  util.hpp
src/fileops/: CMakeLists.txt  cryptfile.cpp  fileops.cpp  inputfile.cpp
src/fileops/include/cryptfile/: cryptfile.hpp
src/fileops/include/csv/: csv_file.hpp
src/fileops/include/inputfile/: inputfile.hpp
src/manager/: CMakeLists.txt  manager.cpp
src/manager/include/manager/: manager.hpp
src/operations/: CMakeLists.txt  add.cpp  find.cpp  load.cpp  save.cpp  view.cpp
src/operations/include/operations/: operations.hpp
src/passwords/: CMakeLists.txt  passwords.cpp
src/passwords/include/passwords/: passwords.hpp
src/services/: CMakeLists.txt  add.cpp  copy.cpp  find.cpp  idservice.cpp  load.cpp  port.cpp  saltidservice.cpp  save.cpp  view.cpp
src/services/include/operations/: operations.hpp
src/services/include/services/: idservice.hpp  managerservices.hpp  saltidservice.hpp
test/encryption/: CMakeLists.txt  encryption_test.cpp
